deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jsonmapreduce
  name: jsonmapreduce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jsonmapreduce
  template:
    metadata:
      labels:
        app: jsonmapreduce
    spec:
      containers:
        - image: davutozcan/jsonmapreduce:2
          name: jsonmapreduce
---
kind: Service
apiVersion: v1
metadata:
  name: jsonmapreduce
spec:
  selector:
    app: jsonmapreduce
  type: ClusterIP
  ports:
    - name: httpport
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jsonmapreduce
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jsonmapreduce2.davutozcan.com
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: jsonmapreduce2.davutozcan.com
      http:
        paths:
          - backend:
              service:
                name: jsonmapreduce
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - jsonmapreduce2.davutozcan.com
      secretName: jsonmapreduce2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
  - host: test.davutozcan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jsonmapreduce
            port:
              number: 80
  tls:
    - hosts:
        - test.davutozcan.com
      secretName: testdavutozcan
